# idp-search-rag

./: .gitignore  README.md  metadata_store.json  pyproject.toml  vector_store_with_metadata.index
chroma_db/: docstore.json  index_store.json
llama_index.json/: docstore.json  index_store.json
src/: app.py  data_gatherer.py  data_gathering.py  data_retrieval.py  embeddings_vectordb.py
