[tool.poetry]
name = "idp-search-rag"
version = "0.1.0"
description = "RAG Implementation using FastAPI or Flask for contextual search of datasets on India Data Portal"
authors = ["Surya Kandukuri <sudham.surya@gmail.com>"]
readme = "README.md"
#requires-python = ">=3.13,<4.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
nltk = ">=3.9.1,<4.0.0"
requests = ">=2.32.3,<3.0.0"
ckanapi = ">=4.8,<5.0"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
python-dotenv = ">=1.0.1,<2.0.0"
llama-index = ">=0.12.16,<0.13.0"
llama-index-llms-groq = ">=0.3.1,<0.4.0"
chromadb = "^0.6.3"
llama-index-embeddings-huggingface = "^0.5.1"
llama-index-vector-stores-chroma = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
